# cmux

./: .gitignore  CLAUDE.md  admin
.github/workflows/: relayd-ci.yml
GhosttyTabs.xcodeproj/: project.pbxproj
GhosttyTabs.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
RelayClient/: ConnectView.swift  RelayClientApp.swift  RelayConnection.swift  ServerBrowserView.swift  SessionDetailView.swift  SessionRowView.swift  TerminalSessionView.swift
docs/: protocol.md
relayd/: Cargo.toml
relayd/src/: claude_detect.rs  main.rs  project.rs  protocol.rs  session.rs  ws.rs
